# NetSimu

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: architecture.md  netsimu_visual_lab.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/panels/: Connections.tsx  DetailPanel.tsx  EdgeDetail.tsx  LiveDataTab.tsx  Markdown.tsx  Tooltip.tsx  tooltips.ts
frontend/src/state/: LiveContext.tsx  connectStream.ts
frontend/src/styles/: tokens.css
frontend/src/topology/: Canvas.tsx  layout.ts  parents.ts  plugins.d.ts  style.ts
netops_sim/: __init__.py  audit_buffer.py  bus.py  clock.py  distractors.py  entities.py  faults.py  grading.py  physics.py  replay.py  runner.py  scenarios.py  snapshots.py  topology.py  vmotion.py
netops_sim/emitters/: __init__.py  gnmi_ws.py  nsx_api.py  nxapi.py  serve_all.py  syslog.py
netops_sim/web/: __init__.py  baseline_ticker.py  cli.py  content_loader.py  layout_store.py  serialize.py  server.py  sim_runtime.py
netops_sim/web/content/: __init__.py
netops_sim/web/content/concepts/: application.md  attached_to.md  bgp.md  bgp_session.md  connects_to.md  consists_of.md  depends_on.md  dfw.md  vm.md  (+28 more)
scripts/: demo_end_to_end.py  run_all_scenarios.py
tests/: test_clock.py  test_distractors.py  test_grading.py  test_scenarios.py  test_snapshots.py  test_topology.py  test_vmotion.py
tests/web/: test_concept_endpoint.py  test_layout_endpoints.py  test_stream.py  test_topology_endpoint.py
